--- a/repos/client/package.json
+++ b/repos/client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.11",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.11",
     "next": "15.1.6",
