--- a/repos/client/package.json
+++ b/repos/client/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@tabler/icons-react": "^3.29.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.11",
@@ -21,7 +22,9 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recordrtc": "^5.6.2",
     "simplex-noise": "^4.0.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -30,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recordrtc": "^5.6.14",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
