--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /node_modules
 /repos/server/.env*
 /repos/server/node_modules
+/repos/server/public
 /repos/client/.next
 /repos/client/node_modules
 /repos/client/next-env.d.ts
