--- a/repos/client/package.json
+++ b/repos/client/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/recordrtc": "^5.6.14",
+    "@types/socket.io-client": "^3.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
@@ -45,5 +46,12 @@
       "react": "^19.0.0",
       "react-dom": "^19.0.0"
     }
+  },
+  "eslintConfig": {
+    "ignorePatterns": [
+      "node_modules/",
+      "dist/",
+      "src/components/ui/"
+    ]
   }
 }
