--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "setup": "bash ./setup.sh",
+    "setup": "bash ./scripts/setup.sh",
     "build": "docker compose build --no-cache",
     "start": "docker compose up -d",
     "stop": "docker compose down",
     "list": "docker ps -a",
-    "logs": "docker compose logs -f"
+    "logs": "docker compose logs -f",
+    "migrate": "bash ./scripts/migrate.sh"
   }
 }
