--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "docker compose build --no-cache",
     "start": "docker compose up -d",
     "stop": "docker compose down",
-    "list": "docker ps -a",
+    "ps": "docker ps -a",
     "logs": "docker compose logs -f",
     "migrate": "bash ./scripts/migrate.sh"
   }
