--- a/repos/server/.github/workflows/develop.yml
+++ b/repos/server/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: Deploy in Staging
+name: Deploy in Development
 on:
   push:
     branches:
@@ -28,4 +28,4 @@ jobs:
           docker push ${{ secrets.AWS_ACCOUNT_ID_DEV }}.dkr.ecr.${{ secrets.AWS_REGION_DEV }}.amazonaws.com/server:latest
       - name: Deploy to AWS ECS
         run: |
-          aws ecs update-service --cluster audiobook-cluster --service server --force-new-deployment
+          aws ecs update-service --cluster ${{ secrets.AWS_ECS_CLUSTER }} --service ${{ secrets.AWS_ECS_SERVICE }} --force-new-deployment
