--- a/repos/server/.github/workflows/staging.yml
+++ b/repos/server/.github/workflows/staging.yml
@@ -28,4 +28,4 @@ jobs:
           docker push ${{ secrets.AWS_ACCOUNT_ID_STG }}.dkr.ecr.${{ secrets.AWS_REGION_STG }}.amazonaws.com/server:latest
       - name: Deploy to AWS ECS
         run: |
-          aws ecs update-service --cluster audiobook-cluster --service server --force-new-deployment
+          aws ecs update-service --cluster ${{ secrets.AWS_ECS_CLUSTER }} --service ${{ secrets.AWS_ECS_SERVICE }} --force-new-deployment
